# mothics

./: .gitignore  Makefile  README.md  cli.py  cli.sh  config.toml  mockup.py  modem.service  mothics.service  pyproject.toml  requirements.txt  vpn.service
.github/workflows/: sphinx.yml
data/chk/: 20260420-175742.chk.json  20260420-175812.chk.json  20260420-175842.chk.json
docs/: basics.rst  conf.py  index.rst  setup.rst
mothics/: __init__.py  aggregator.py  api_server.py  bokeh_plots.py  comm_interface.py  command_line.py  database.py  display_logger.py  gpio_modules.py  helpers.py  i2c_modules.py  preprocessors.py  system_manager.py  track.py  webapp.py
mothics/blueprints/: bp_database.py  bp_logging.py  bp_monitoring.py  bp_saving.py  bp_settings.py  settings_registry.py
mothics/bokeh_apps/: server.py
mothics/static/: local_preferences.js  style.css
mothics/templates/: base.html  gps_map.html  index.html  settings.html  table.html  tracks.html
mothics/web_ui/: app.js  data.js  index.html  style.css
src/: aggregator.py  bokeh_plots.py  comm_interface.py  database.py  helpers.py  track.py  webapp.py
src/blueprints/: bp_monitoring.py  bp_settings.py
src/templates/: base.html  index.html  logs.html  settings.html  status.html  table.html
