# Sources:
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
# https://github.com/pypa/sampleproject/blob/main/pyproject.toml

[project]
name = "mothics"
description = "Data collection and analysis tool for moth sailing"
readme = "README.md"
version = "0.1.0"
authors = [
	{name = "Iacopo Ricci"},
	{name = "Audace Sailing Team"}
]
requires-python = ">=3.10"
license = {text = "MIT License"}
dependencies = [
	     "adafruit-circuitpython-dht=4.0.7",
	     "argh==0.31.3",
	     "bokeh==3.6.2",
	     "Flask==3.1.0",
	     "Flask-Compress==1.17",
	     "jsonschema==4.23.0",
	     "jsonschema-specifications==2024.10.1",
	     "numpy==2.1.3",
	     "paho-mqtt==2.1.0",
	     "pyproj==3.7.1",
	     "pyserial==3.5",
	     "psutil==7.0.0",
	     "raspberrypi-tm1637==1.3.7",
	     "requests==2.32.3",
	     "rpi-lgpio==0.6",
	     "tabulate==0.9.0",
	     "tinydb==4.8.2",
	     "toml==0.10.2",
	     "waitress==3.0.2"
]

classifiers = ["Programming Language :: Python :: 3.10"]


[project.urls]
repository = "https://github.com/Audace-Sailing-Team/mothics"
# homepage = ""
# documentation = ""

# The following would provide a command line executable called `mypackage`
# which executes the function `cli.main` from this package when invoked.
[project.scripts]
mothics = "cli:main"

# Package building
[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

